--- a/.github/workflows/env-workflow.yaml
+++ b/.github/workflows/env-workflow.yaml
@@ -2,13 +2,15 @@ name: Github Actions Custom Variables
 run-name: Github Action Custom Variables
 on: [push]
 env:
-  API_KEY: "adarsh1cecec2h3445"
+  API_KEY: {{ secrets.API_KEY }}
 jobs:
   Run-Python-Script:
     runs-on: ubuntu-latest
     steps:
     -  name: Check out repository code
        uses: actions/checkout@v4.1.7
+    -  name: Read Secret
+       uses: echo $ {{ env.API_KEY }}
     -  name: Get Python Version
        run: python --version
     -  name: Run Script
